[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.18",
    "langchain>=0.3.19",
    "openai>=1.65.2",
    "pypdf>=5.3.1",
    "python-magic>=0.4.27",
    "streamlit>=1.42.2",
    "langchain-core>=0.3.40",
    "langchain-text-splitters>=0.3.6",
]
